@@ -1,27 +1,30 @@
 package org.opentripplanner.graph_builder.module;
 
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
+import org.opentripplanner.graph_builder.issues.ParkAndRideEntranceRemoved;
 import org.opentripplanner.graph_builder.linking.LinkingDirection;
 import org.opentripplanner.graph_builder.services.GraphBuilderModule;
 import org.opentripplanner.model.StopLocation;
 import org.opentripplanner.routing.core.TraverseMode;
 import org.opentripplanner.routing.core.TraverseModeSet;
-import org.opentripplanner.routing.edgetype.StreetBikeParkLink;
 import org.opentripplanner.routing.edgetype.StreetBikeRentalLink;
-import org.opentripplanner.routing.edgetype.StreetTransitStopLink;
 import org.opentripplanner.routing.edgetype.StreetTransitEntranceLink;
+import org.opentripplanner.routing.edgetype.StreetTransitStopLink;
+import org.opentripplanner.routing.edgetype.StreetVehicleParkingLink;
+import org.opentripplanner.routing.edgetype.VehicleParkingEdge;
 import org.opentripplanner.routing.graph.Graph;
-import org.opentripplanner.routing.vertextype.BikeParkVertex;
+import org.opentripplanner.routing.vehicle_parking.VehicleParkingHelper;
+import org.opentripplanner.routing.vehicle_parking.VehicleParkingService;
 import org.opentripplanner.routing.vertextype.BikeRentalStationVertex;
 import org.opentripplanner.routing.vertextype.TransitEntranceVertex;
 import org.opentripplanner.routing.vertextype.TransitStopVertex;
+import org.opentripplanner.routing.vertextype.VehicleParkingEntranceVertex;
 import org.opentripplanner.util.OTPFeature;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
 
 /**
  * {@link org.opentripplanner.graph_builder.services.GraphBuilderModule} plugin that links various
@@ -45,7 +48,7 @@ public class StreetLinkerModule implements GraphBuilderModule {
   }
 
   public List<String> getPrerequisites() {
-    return Arrays.asList("streets"); // don't include transit, because we also link P+Rs and bike rental stations,
+    return List.of("streets"); // don't include transit, because we also link P+Rs and bike rental stations,
     // which you could have without transit. However, if you have transit, this module should be run after it
     // is loaded.
   }
@@ -60,7 +63,7 @@ public class StreetLinkerModule implements GraphBuilderModule {
       linkTransitStops(graph);
       linkTransitEntrances(graph);
       linkBikeRentals(graph);
-      linkBikeParks(graph);
+      linkVehicleParks(graph, issueStore);
     }
 
     // Calculates convex hull of a graph which is shown in routerInfo API point
@@ -129,19 +132,80 @@ public class StreetLinkerModule implements GraphBuilderModule {
     }
   }
 
-  private void linkBikeParks(Graph graph) {
-    LOG.info("Linking bike parks to graph...");
-    // It is enough to have the edges traversable by foot, as you can walk with the bike if necessary
-    for (BikeParkVertex bikePark : graph.getVerticesOfType(BikeParkVertex.class)) {
+  private void linkVehicleParks(Graph graph, DataImportIssueStore issueStore) {
+    LOG.info("Linking vehicle parks to graph...");
+    for (VehicleParkingEntranceVertex vehicleParkingEntranceVertex : graph.getVerticesOfType(
+        VehicleParkingEntranceVertex.class)) {
+
+      if (vehicleParkingEntranceVertex.getParkingEntrance().getVertex() == null) {
+        linkVehicleParkingWithLinker(graph, vehicleParkingEntranceVertex);
+        continue;
+      }
+
+      if (graph.containsVertex(vehicleParkingEntranceVertex.getParkingEntrance().getVertex())) {
+        VehicleParkingHelper.linkToGraph(vehicleParkingEntranceVertex);
+        continue;
+      }
+
+      issueStore.add(new ParkAndRideEntranceRemoved(vehicleParkingEntranceVertex.getParkingEntrance()));
+      removeVehicleParkingEntranceVertexFromGraph(vehicleParkingEntranceVertex, graph);
+
+    }
+  }
+
+  private static void linkVehicleParkingWithLinker(Graph graph, VehicleParkingEntranceVertex vehicleParkingVertex) {
+    if (vehicleParkingVertex.isWalkAccessible()) {
       graph.getLinker().linkVertexPermanently(
-          bikePark,
-          new TraverseModeSet(TraverseMode.WALK),
-          LinkingDirection.BOTH_WAYS,
-          (vertex, streetVertex) -> List.of(
-              new StreetBikeParkLink((BikeParkVertex) vertex, streetVertex),
-              new StreetBikeParkLink(streetVertex, (BikeParkVertex) vertex)
-          )
+              vehicleParkingVertex,
+              new TraverseModeSet(TraverseMode.WALK),
+              LinkingDirection.BOTH_WAYS, (vertex, streetVertex) -> List.of(
+                      new StreetVehicleParkingLink(
+                              (VehicleParkingEntranceVertex) vertex, streetVertex),
+                      new StreetVehicleParkingLink(
+                              streetVertex, (VehicleParkingEntranceVertex) vertex)
+              )
       );
+    }
+
+    if (vehicleParkingVertex.isCarAccessible()) {
+      graph.getLinker().linkVertexPermanently(
+              vehicleParkingVertex,
+              new TraverseModeSet(TraverseMode.CAR),
+              LinkingDirection.BOTH_WAYS,
+              (vertex, streetVertex) -> List.of(
+                      new StreetVehicleParkingLink(
+                              (VehicleParkingEntranceVertex) vertex, streetVertex),
+                      new StreetVehicleParkingLink(
+                              streetVertex, (VehicleParkingEntranceVertex) vertex)
+              )
+      );
+    }
+  }
+
+  private void removeVehicleParkingEntranceVertexFromGraph(VehicleParkingEntranceVertex vehicleParkingEntranceVertex, Graph graph) {
+    var vehicleParkingEdge =
+        vehicleParkingEntranceVertex.getOutgoing().stream()
+            .filter(VehicleParkingEdge.class::isInstance)
+            .map(VehicleParkingEdge.class::cast)
+            .findFirst()
+            .orElseThrow(() -> new IllegalStateException("VehicleParkingEdge missing from vertex: " + vehicleParkingEntranceVertex));
+
+    var entrance = vehicleParkingEntranceVertex.getParkingEntrance();
+
+    var vehicleParking = vehicleParkingEdge.getVehicleParking();
+
+    boolean removeVehicleParking = vehicleParking.getEntrances().size() == 1
+        && vehicleParking.getEntrances().get(0).equals(entrance);
+
+    vehicleParkingEntranceVertex.getIncoming().forEach(graph::removeEdge);
+    vehicleParkingEntranceVertex.getOutgoing().forEach(graph::removeEdge);
+    graph.remove(vehicleParkingEntranceVertex);
+
+    if (removeVehicleParking) {
+      var vehicleParkingService = graph.getService(VehicleParkingService.class);
+      vehicleParkingService.removeVehicleParking(vehicleParking);
+    } else {
+      vehicleParking.getEntrances().remove(entrance);
     }
   }
 
